# kafka-labs

lab_01/: docker-compose.yml  readme.md  topic.txt
lab_01/app/: BatchMessageConsumer.py  Dockerfile  Producer.py  SingleMessageConsumer.py  docker-compose.yml  utils.py
lab_02/: readme.md
lab_02/task_01/: docker-compose-app.yml  docker-compose-cluster.yml  readme.md
lab_02/task_01/app/: Dockerfile  pyproject.toml
lab_02/task_01/app/src/services/: external_msg_handler.py  internal_msg_handler.py  utils.py
lab_02/task_01/app/src/ui/: ui.py
lab_02/task_01/app/src/ui/templates/: chat.html  index.html
lab_02/task_02/: docker-compose.yml  ksqldb-queries.sql  readme.md
lab_04/: Dockerfile.jmx  debezium-connector.json  docker-compose.yaml  jmx-config.yml  readme.md  test_consumer.py
lab_04/img/: grafana.json
lab_04/postgres-init/: 01_create_tables.sql
lab_04/prometheus/: prometheus.yml
lab_05/: readme.md
lab_05/task_01/: docker-compose.yml  readme.md  reassignment.json
lab_05/task_02/: docker-compose.yml  readme.md
lab_06/: readme.md
lab_06/kafka-test-app/: consumer.py  producer.py
lab_06/scripts/: check_nifi.sh  start_nifi.sh
lab_06/settings/: bootstrap-servers.txt  client.properties  topic-description.txt  user.avsc
lab_07/: docker-compose-analytics.yml  docker-compose-app.yml  docker-compose-connect.yml  docker-compose-monitoring.yml  docker-compose.yml  readme.md  register_schemes.sh  setup_acl.sh  setup_ssl.sh  setup_tmp_data.sh  setup_topics.sh
lab_07/api/: Dockerfile  admin_api.py  client_api.py  common.py  requirements.txt  (+1 more)
(+155 files in other folders)
